--- a/views/topic/add.ejs
+++ b/views/topic/add.ejs
@@ -13,25 +13,24 @@
 <div class="main layui-clear">
   <h2 class="page-title">发表问题</h2>
 
-  <!-- {{# if(d.edit && !d.myself){ }}
+  <% if(currentUser.get('id')!=post[0].get('questionerId')){ %>
   <div class="fly-none">并无权限</div>
-  {{# } else { }} -->
+  <% }else { %>
   <div class="layui-form layui-form-pane">
     <form action="{{d.edit ? '/jie/edit/' : ''}}" method="post">
       <div class="layui-form-item">
         <label for="L_title" class="layui-form-label">标题</label>
         <div class="layui-input-block">
-          <!-- {{# if(d.edit){ }}
-          <input type="text" id="L_title" name="title" required lay-verify="required" autocomplete="off" value="{{d.edit.title}}" {{ user.auth >= 1 ? 'required' : 'readonly' }} title="标题不可修改" class="layui-input">
-          <input type="hidden" name="id" value="{{d.edit.id}}">
-          {{# } else { }} -->
+          <% if(title=="编辑问题"){ %>
+          <input type="text" id="title" name="title" required lay-verify="required" autocomplete="off" value="<%= post[0].get('title') %>" readonly title="标题不可修改" class="layui-input">
+          <% } else { %>
           <input type="text" id="title" name="title" autocomplete="off" class="layui-input"  onkeyup="this.value=this.value.replace(/^ +| +$/g,'')">
-          <!-- {{# } }} -->
+          <% } %>
         </div>
       </div>
       <div class="layui-form-item layui-form-text">
         <div class="layui-input-block">
-          <textarea id="content" name="content" placeholder="请输入内容" class="layui-textarea fly-editor" style="height: 260px;"></textarea>
+          <textarea id="content" name="content" placeholder="请输入内容" class="layui-textarea fly-editor" style="height: 260px;"><%= post[0].get('content') %></textarea>
         </div>
         <label for="L_content" class="layui-form-label" style="top: -2px;">描述</label>
       </div>
@@ -41,24 +40,28 @@
           <div class="layui-input-block">
             <select lay-verify="required" id="topicClass" name="class">
               <option></option>
-              <option value="博士问题">博士问题</option>
-              <option value="企业问题">企业问题</option>
+              <option <% if(post[0].get('topicClass')=='博士问题'){ %> selected <% } %> value="博士问题">博士问题</option>
+              <option <% if(post[0].get('topicClass')=='企业问题'){ %> selected <% } %> value="企业问题">企业问题</option>
             </select>
           </div>
         </div>
         <div class="layui-inline">
           <label class="layui-form-label">悬赏博士点</label>
           <div class="layui-input-inline">
-            <input type="number" name="reward" id="reward" autocomplete="off" class="layui-input">
+            <input type="number" name="reward" id="reward" value="<%= post[0].get('reward') %>" autocomplete="off" class="layui-input">
           </div>
         </div>
       </div>
       <div class="layui-form-item">
-        <a class="layui-btn" id="post_question">立即发布</a>
+        <% if(title=="编辑问题"){ %>
+          <a class="layui-btn" id="post_edit">立即修改</a>
+        <% } else { %>
+         <a class="layui-btn" id="post_question">立即发布</a>
+        <% } %>
       </div>
     </form>
   </div>
-
+  <% } %>
 </div>
 
 <%- include("../footer.ejs") %>
@@ -76,7 +79,31 @@ layui.use(['jquery','layer'], function(){
         title: $("#title").val(),
         content: $("#content").val(),
         topicClass: $("#topicClass").val(),
-        reward: $("#reward").val()
+        reward: $("#reward").val(),
+        identity: '<%= identity %>',
+        isEidt: false
+      },
+      function(data,status){
+        if(data == 'success'){
+          window.location.href="/topic";
+        }else{
+          layer.msg(data);
+        }
+      }
+    )
+  });
+
+  $("#post_edit").click(function(){
+    $.post(
+      "/topic/add",
+      {
+        title: $("#title").val(),
+        content: $("#content").val(),
+        topicClass: $("#topicClass").val(),
+        reward: $("#reward").val(),
+        identity: '<%= identity %>',
+        isEidt: true,
+        postId: '<%= post[0].get("id") %>'
       },
       function(data,status){
         if(data == 'success'){
