添加更多求解的链接

--- a/views/topic/index.ejs
+++ b/views/topic/index.ejs
@@ -68,7 +68,7 @@
 
       <div style="text-align: center">
         <div class="laypage-main">
-          <a href="jie/index.html" class="laypage-next">更多求解</a>
+          <a href="topic/total/page/1" class="laypage-next">更多求解</a>
         </div>
       </div>
 
