--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -34,7 +34,11 @@
         </span>
       </div>
       <div class="user-mine">
-        <div class="layui-form layui-form-pane mine-view">1</div>
+        <div class="layui-form layui-form-pane mine-view">
+          <blockquote class="layui-elem-quote">这个貌似不用多介绍，因为你已经在太多的地方都看到</blockquote>
+          <blockquote class="layui-elem-quote">这个貌似不用多介绍，因为你已经在太多的地方都看到</blockquote>
+          <blockquote class="layui-elem-quote">这个貌似不用多介绍，因为你已经在太多的地方都看到</blockquote>
+        </div>
         <div class="layui-form layui-form-pane mine-view">2</div>
         <div class="layui-form layui-form-pane mine-view">
 
